--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -31,6 +31,7 @@
     {{ end }}
     
     <div class="content">
+      {{/* Fixed: Ensure .Content is spelled correctly */}}
       {{ .Content }}
     </div>
     
